prototypes/p2a/tests/invalid/06_result_ignored.hll
// MUST BE REJECTED: Result of a fallible function is ignored (not consumed)

type Email = String where validate.email()
struct InvalidEmail { String input }

function parse_email(String input) -> Result<Email, InvalidEmail> {
    Ok(Email(input))
}

function main() {
    parse_email("test@x.com")  // ERROR: Result not consumed — must handle or assign
    println("done")
}
